revenuecat-2022-12-1/v3.0/Attribution/searchadshq.md
---
title: "SearchAdsHQ"
slug: "searchadshq"
excerpt: "Integrate Purchases SDK with SearchAdsHQ for precise revenue tracking"
hidden: false
createdAt: "2020-07-30T17:43:45.879Z"
updatedAt: "2020-07-30T18:59:09.159Z"
---
With our SearchAdsHQ integration you can:
* Accurately track subscriptions generated from Apple Search Ads campaigns, allowing you to know precisely how much revenue your campaigns generate.
* Send trial conversions and renewals directly from RevenueCat to SearchAdsHQ, allowing for tracking without an app open.
* Continue to follow your cohorts for months to know the long tail revenue generated by your campaigns.

[block:api-header]
{
  "title": "1. Send device data to RevenueCat"
}
[/block]
The SearchAdsHQ integration requires that Apple Search Ads attribution data is sent from the device to RevenueCat. 

The simplest way to collect this information is by setting the `automaticAppleSearchAdsAttributionCollection` property to `true` **before** configuring the *Purchases SDK*.
[block:code]
{
  "codes": [
    {
      "code": "import iAd\n// ...\nPurchases.automaticAppleSearchAdsAttributionCollection = true\nPurchases.configure(withAPIKey: \"public_sdk_key\")",
      "language": "swift"
    }
  ]
}
[/block]
Our guide on [Apple Search Ads attribution](doc:apple-search-ads) outlines this step in more detail.

The integration also accepts some optional device-specific data below:
[block:parameters]
{
  "data": {
    "h-0": "Key",
    "h-1": "Description",
    "h-2": "Required",
    "0-0": "`$idfa`",
    "0-2": "❌ (optional)",
    "0-1": "iOS [advertising identifier](https://developer.apple.com/documentation/adsupport/asidentifiermanager/1614151-advertisingidentifier) UUID"
  },
  "cols": 3,
  "rows": 1
}
[/block]
This data should be sent to RevenueCat through reserved [Subscriber Attributes](doc:subscriber-attributes) keys. 
[block:code]
{
  "codes": [
    {
      "code": "import AdSupport\nimport iAd\n// ...\nPurchases.automaticAppleSearchAdsAttributionCollection = true\nPurchases.configure(withAPIKey: \"public_sdk_key\")\n// ...\nPurchases.shared.setAttributes([\n    \"$idfa\" : ASIdentifierManager.shared().advertisingIdentifier.uuidString\n])",
      "language": "swift",
      "name": "Swift"
    }
  ]
}
[/block]

[block:api-header]
{
  "title": "2. Send RevenueCat events into SearchAdsHQ"
}
[/block]
After you've set up the *Purchase* SDK to send device data to RevenueCat, you can "turn on" the integration and configure the event names from the RevenueCat dashboard.

1. Navigate to your app in the RevenueCat dashboard and choose 'SearchAdsHQ' from the integrations menu.
2. Add your SearchAdsHQ Client ID, and full iTunes App Store Id (including the `id` prefix).
3. Enter the event names that RevenueCat will send or choose the default event names.
4. Select whether you want RevenueCat to report proceeds (after app store cut) or revenue (gross sales).
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/b861ee5-app.revenuecat.com_apps_8dc09e52_integrations_searchadshq.png",
        "app.revenuecat.com_apps_8dc09e52_integrations_searchadshq.png",
        1699,
        2941,
        "#f8f9fa"
      ],
      "caption": "SearchAdsHQ configuration screen"
    }
  ]
}
[/block]

[block:callout]
{
  "type": "danger",
  "body": "Make sure to remove all client-side tracking of revenue. Since RevenueCat will be sending events for all revenue actions, tracking purchases yourself directly into SearchAdsHQ can lead to double counting of revenue.",
  "title": "Remove any client-side purchase tracking"
}
[/block]

[block:callout]
{
  "type": "success",
  "title": "You've done it!",
  "body": "You should start seeing events from RevenueCat appear in SearchAdsHQ"
}
[/block]