revenuecat-2022-12-1/v3.2.1/Attribution/searchadshq.md
---
title: "SearchAdsHQ"
slug: "searchadshq"
excerpt: "Integrate Purchases SDK with SearchAdsHQ for precise revenue tracking"
hidden: false
metadata: 
  title: "SearchAdsHQ Revenue Integration – RevenueCat"
  description: "With our SearchAdsHQ integration, you can accurately track subscriptions generated from Apple Search Ads campaigns, allowing you to know precisely how much revenue your campaigns generate and more."
  image: 
    0: "https://files.readme.io/48556af-OG_image.png"
    1: "OG image.png"
    2: 1200
    3: 627
    4: "#e9acb0"
createdAt: "2020-07-30T17:43:45.879Z"
updatedAt: "2021-11-16T23:30:33.830Z"
---
With our SearchAdsHQ integration you can:
* Accurately track subscriptions generated from Apple Search Ads campaigns, allowing you to know precisely how much revenue your campaigns generate.
* Send trial conversions and renewals directly from RevenueCat to SearchAdsHQ, allowing for tracking without an app open.
* Continue to follow your cohorts for months to know the long tail revenue generated by your campaigns.

# 1. Send device data to RevenueCat

The SearchAdsHQ integration requires that Apple Search Ads attribution data is sent from the device to RevenueCat. 

The simplest way to collect this information is by setting the `automaticAppleSearchAdsAttributionCollection` property to `true` **before** configuring the *Purchases SDK*.
[block:code]
{
  "codes": [
    {
      "code": "import iAd\n// ...\nPurchases.automaticAppleSearchAdsAttributionCollection = true\nPurchases.configure(withAPIKey: \"public_sdk_key\")",
      "language": "swift"
    }
  ]
}
[/block]
Our guide on [Apple Search Ads attribution](doc:apple-search-ads) outlines this step in more detail.

The integration also accepts some optional device-specific data below:
[block:parameters]
{
  "data": {
    "h-0": "Key",
    "h-1": "Description",
    "h-2": "Required",
    "0-0": "`$idfa`",
    "0-2": "❌ (optional)",
    "0-1": "iOS [advertising identifier](https://developer.apple.com/documentation/adsupport/asidentifiermanager/1614151-advertisingidentifier) UUID"
  },
  "cols": 3,
  "rows": 1
}
[/block]
This data should be sent to RevenueCat through reserved [Subscriber Attributes](doc:subscriber-attributes) keys. 
[block:code]
{
  "codes": [
    {
      "code": "import AdSupport\nimport iAd\n// ...\nPurchases.automaticAppleSearchAdsAttributionCollection = true\nPurchases.configure(withAPIKey: \"public_sdk_key\")\n// ...\nPurchases.shared.setAttributes([\n    \"$idfa\" : ASIdentifierManager.shared().advertisingIdentifier.uuidString\n])",
      "language": "swift",
      "name": "Swift"
    }
  ]
}
[/block]

[block:callout]
{
  "type": "danger",
  "title": "Device identifiers with iOS App Tracking Transparency (iOS 14.5+)",
  "body": "If you are requesting the App Tracking permission through ATT to access the IDFA, you can call `.collectDeviceIdentifiers()` *again* if the customer accepts the permission to update the `$idfa` attribute in RevenueCat."
}
[/block]
# 2. Send RevenueCat events into SearchAdsHQ

After you've set up the *Purchase* SDK to send device data to RevenueCat, you can "turn on" the integration and configure the event names from the RevenueCat dashboard.

1. Navigate to your app in the RevenueCat dashboard and choose 'SearchAdsHQ' from the integrations menu.
2. Add your SearchAdsHQ Client ID.
3. Enter the event names that RevenueCat will send or choose the default event names.
4. Select whether you want RevenueCat to report proceeds (after app store cut) or revenue (gross sales).
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/bdf0020-Screen_Shot_2021-11-16_at_2.34.26_PM.png",
        "Screen Shot 2021-11-16 at 2.34.26 PM.png",
        574,
        928,
        "#f8f9f9"
      ],
      "caption": "SearchAdsHQ configuration screen"
    }
  ]
}
[/block]

[block:callout]
{
  "type": "danger",
  "body": "Make sure to remove all client-side tracking of revenue. Since RevenueCat will be sending events for all revenue actions, tracking purchases yourself directly into SearchAdsHQ can lead to double counting of revenue.",
  "title": "Remove any client-side purchase tracking"
}
[/block]
# 3. Testing the SearchAdsHQ integration

You can test the SearchAdsHQ integration end-to-end before going live. It's recommended that you test the integration is working properly for new users, and any existing users that may update their app to a new version.

## Make a sandbox purchase with a new user
Simulate a new user installing your app, and go through your app flow to complete a sandbox purchase.

## Check that the required device data is collected
Navigate the the [Customer View](doc:customers) for the test user that just made a purchase. If you chose to send the additional data from step 1 above, check it is listed as an attribute for the user.

## Check that the SearchAdsHQ event delivered successfully
While still on the Customer View, click into the test purchase event in the [Customer History](doc:customer-history) and make sure that the SearchAdsHQ integration event exists and was delivered successfully. 
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/dc9eef1-Screen_Shot_2020-09-14_at_7.19.02_PM.png",
        "Screen Shot 2020-09-14 at 7.19.02 PM.png",
        701,
        223,
        "#f7f2f1"
      ]
    }
  ]
}
[/block]

[block:callout]
{
  "type": "success",
  "title": "You've done it!",
  "body": "You should start seeing events from RevenueCat appear in SearchAdsHQ"
}
[/block]